cambio de estructura

--- a/index.html
+++ b/index.html
@@ -56,71 +56,72 @@
           <p class="header__address">Triple Peaks, 200 Success Avenue</p>
         </div>
       </header>
+      <main class="content">
+        <section class="staff" id="staff">
+          <h2 class="staff__title">Los preferidos de nuestro lectores</h2>
+
+          <p class="staff__subtitle">Que nuestros lectores y lectoras aman</p>
+          <ul class="staff__cards">
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">Meditaciones</h3>
+                <p class="card__text">
+                  Meditaciones es una serie de escritos personales del emperador
+                  romano Marco Aurelio, en los que reflexiona sobre su vida y su
+                  filosofía estoica. Es un libro atemporal que ofrece sabiduría
+                  y consejos prácticos para vivir una vida virtuosa y
+                  significativa.
+                </p>
+                <p class="card__footer">Marco Aurelio</p>
+              </div>
+            </li>
+
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">The First Crusde: A New History</h3>
+                <p class="card__text">
+                  Aunque este libro no está en español The First Crusade: A New
+                  History ofrece una perspectiva fresca y detallada sobre la
+                  Primera Cruzada, explorando sus causas, desarrollo y
+                  consecuencias. El autor analiza las motivaciones de los
+                  participantes y el impacto duradero de este evento histórico
+                  en la historia medieval.
+                </p>
+                <p class="card__footer">Thomas Asbridge</p>
+              </div>
+            </li>
+
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">El Plan de tu Alma</h3>
+                <p class="card__text">
+                  El Plan de tu Alma es un libro que explora la idea de que
+                  nuestras almas tienen un propósito y un plan antes de
+                  encarnarnos en este mundo. A través de relatos y enseñanzas,
+                  el autor nos invita a reflexionar sobre nuestra vida y a
+                  descubrir nuestro verdadero camino espiritual.
+                </p>
+                <p class="card__footer">Robert Schwartz</p>
+              </div>
+            </li>
+
+            <li class="card">
+              <div class="card__content">
+                <h3 class="card__title">La Psicologia del Dinero</h3>
+                <p class="card__text">
+                  La Psicología del Dinero es un libro que explora la relación
+                  entre nuestras emociones, comportamientos y decisiones
+                  financieras. A través de ejemplos y estudios, el autor nos
+                  ayuda a entender cómo nuestras creencias y actitudes hacia el
+                  dinero pueden influir en nuestra vida financiera y cómo
+                  podemos mejorar nuestra relación con el dinero.
+                </p>
+                <p class="card__footer">Morgan Housel</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </main>
     </div>
-    <main class="content">
-      <section class="staff" id="staff">
-        <h2 class="staff__title">Los preferidos de nuestro lectores</h2>
-
-        <p class="staff__subtitle">Que nuestros lectores y lectoras aman</p>
-        <ul class="staff__cards">
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">Meditaciones</h3>
-              <p class="card__text">
-                Meditaciones es una serie de escritos personales del emperador
-                romano Marco Aurelio, en los que reflexiona sobre su vida y su
-                filosofía estoica. Es un libro atemporal que ofrece sabiduría y
-                consejos prácticos para vivir una vida virtuosa y significativa.
-              </p>
-              <p class="card__footer">Marco Aurelio</p>
-            </div>
-          </li>
-
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">The First Crusde: A New History</h3>
-              <p class="card__text">
-                Aunque este libro no está en español The First Crusade: A New
-                History ofrece una perspectiva fresca y detallada sobre la
-                Primera Cruzada, explorando sus causas, desarrollo y
-                consecuencias. El autor analiza las motivaciones de los
-                participantes y el impacto duradero de este evento histórico en
-                la historia medieval.
-              </p>
-              <p class="card__footer">Thomas Asbridge</p>
-            </div>
-          </li>
-
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">El Plan de tu Alma</h3>
-              <p class="card__text">
-                El Plan de tu Alma es un libro que explora la idea de que
-                nuestras almas tienen un propósito y un plan antes de
-                encarnarnos en este mundo. A través de relatos y enseñanzas, el
-                autor nos invita a reflexionar sobre nuestra vida y a descubrir
-                nuestro verdadero camino espiritual.
-              </p>
-              <p class="card__footer">Robert Schwartz</p>
-            </div>
-          </li>
-
-          <li class="card">
-            <div class="card__content">
-              <h3 class="card__title">La Psicologia del Dinero</h3>
-              <p class="card__text">
-                La Psicología del Dinero es un libro que explora la relación
-                entre nuestras emociones, comportamientos y decisiones
-                financieras. A través de ejemplos y estudios, el autor nos ayuda
-                a entender cómo nuestras creencias y actitudes hacia el dinero
-                pueden influir en nuestra vida financiera y cómo podemos mejorar
-                nuestra relación con el dinero.
-              </p>
-              <p class="card__footer">Morgan Housel</p>
-            </div>
-          </li>
-        </ul>
-      </section>
-    </main>
   </body>
 </html>
