--- a/index.html
+++ b/index.html
@@ -167,31 +167,32 @@
               <p class="person__caption">Joan Feynman</p>
               <img src="images/person_feynman.png" 
               alt="Ilustración de Joan Feynman" 
-              class="person__image person_image_size_l"/>
+              class="person__image person__image_size_l"/>
              </div>
              <div class ="person person_name_burbidge" >
               <p class="person__caption">Margaret Burbidge</p>
               <img src="images/person_burbidge.png" 
               alt="Ilustración de Margaret Burbidge" 
-              class="person__image person_image_size_m"/>
+              class="person__image person__image_size_m"/>
               </div>
            <div class ="person person_name_cannon" >
             <img src="images/person_cannon.png"
               alt="Ilustración de Annie Jump Cannon" 
-              class="person__image person_image_size_m"/>
+              class="person__image person__image_size_m"/>
                <p class="person__caption">Annie Jump Cannon</p>
              </div>
              <div class ="person person_name_mitchell" >
               <img src="images/person_mitchell.png" 
               alt="Ilustración de Maria Mitchell" 
-              class="person__image person_image_size_s"/>
+              class="person__image person__image_size_s"/>
                <p class="person__caption">Maria Mitchell</p>
+               
              </div>
              <div class ="person person_name_tarter" >
               <p class="person__caption">Jill Tarter</p>
               <img src="images/person_tarter.png" 
               alt="Ilustración de Jill Tarter" 
-              class="person__image person_image_size_m"/>
+              class="person__image person__image_size_m"/>
              </div>
         </section>
       </main>
