--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               >
             </li>
             <li>
-              <a class="nav__link" href="#">Eventos</a>
+              <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
               <a class="nav__link" href="#">Conviértete en miembro</a>
@@ -121,7 +121,7 @@
             </li>
           </ul>
         </section>
-        <section class="events">
+        <section class="events" id="events">
           <div class="events__content">
             <h2 class="events__heading">Próximos eventos:</h2>
             <h3 class="events__title">
@@ -156,7 +156,7 @@
               nuestra conferencia busca cambiar esa noción y probar que no ha
               sido así desde, al menos, el siglo XVII.
             </p>
-            <a href="#" class="events__more">Más eventos &rarr;</a>
+            <a href="#events" class="events__more">Más eventos &rarr;</a>
           </div>
           <div class="events__cover">
             <img
