--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
               <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Conviértete en miembro</a>
+              <a class="nav__link" href="#member">Conviértete en miembro</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Contactos</a>
+              <a class="nav__link" href="#contact">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -195,7 +195,99 @@
               class="person__image person__image_size_m"/>
              </div>
         </section>
-      </main>
+        <section class="membership" href="#member" id="member">
+  <h2 class="membership__title">¡Convertirse en miembro es muy fácil!</h2>
+  <ul class="membership__steps">
+    <li class="step">
+      <h3 class="step__title">
+        Paso 1
+        <img
+          src="./images/icon_step_forward.svg"
+          alt="icon forward"
+          class="step__icon"
+        />
+      </h3>
+      <p class="step__description">
+        Completa el formulario de afiliación en línea o en persona.
+      </p>
+    </li>
+    <li class="step">
+      <h3 class="step__title">
+        Paso 2
+        <img
+          src="./images/icon_step_forward.svg"
+          alt="icon forward"
+          class="step__icon"
+        />
+      </h3>
+      <p class="step__description">
+        Ven y recoge tu credencial de la biblioteca en la recepción.
+      </p>
+    </li>
+    <li class="step">
+      <h3 class="step__title">
+        Paso 3
+        <img
+          src="./images/icon_step_forward.svg"
+          alt="icon forward"
+          class="step__icon"
+        />
+      </h3>
+      <p class="step__description">Firma el envés de la tarjeta.</p>
+    </li>
+    <li class="step">
+      <h3 class="step__title">
+        Paso 4
+        <img
+          src="./images/icon_step_finish.svg"
+          alt="icon finish"
+          class="step__icon"
+        />
+      </h3>
+      <p class="step__description">
+        ¡Disfruta de los increíbles beneficios de nuestra membresía!
+      </p>
+    </li>
+  </ul>
+</section>
+<footer class="footer">
+  <div class="footer__columns">
+    <div class="footer__column">
+      <img class="footer__logo" src="images/logo_white.svg" alt="Biblioteca logo">
     </div>
+    <div class="footer__column footer__column-content_hours" >
+      <h2 class="footer__column-heading">
+        Horario de apertura
+      </h2>
+      <ul class="footer__list">
+        <li class="footer__list-item">Lunes a viernes: 9 a.m. -- 8 p.m.</li>
+        <li class="footer__list-item">Sábado y domingo: 10 a.m. -- 6 p.m.</li>
+      </ul>
+    </div>
+    <div class="footer__column footer__column-content_social">
+      <h2 class="footer__column-heading">Redes sociales</h2>
+      <ul class="footer__list">
+        <li class="footer__list-item">
+          <a id="contact"  href="#contact" class="footer__column-link">
+            <img src="images/facebook_white.svg" class="footer__social-icon" alt="Facebook icon">
+            Facebook
+          </a>
+        </li>
+        <li class="footer__list-item">
+          <a href="#" class="footer__column-link">
+            <img src="images/instagram_white.svg" class="footer__social-icon" alt="Instagram icon">
+            Instagram
+          </a>
+        </li>
+      </ul>
+    </div>
+   
+
+  </div>
+ <p class="footer__copyright">
+      &copy; 2024 Misael Navarro
+    </p>
+</footer>  
+  </main>
   </body>
 </html>
