--- a/index.html
+++ b/index.html
@@ -250,12 +250,12 @@
     </li>
   </ul>
 </section>
-<footer class="footer">
+<section class="footer">
   <div class="footer__columns">
     <div class="footer__column">
       <img class="footer__logo" src="images/logo_white.svg" alt="Biblioteca logo">
     </div>
-    <div class="footer__column footer__column-content_hours" >
+    <div class="footer__column footer__column_content_hours" >
       <h2 class="footer__column-heading">
         Horario de apertura
       </h2>
@@ -264,7 +264,7 @@
         <li class="footer__list-item">Sábado y domingo: 10 a.m. -- 6 p.m.</li>
       </ul>
     </div>
-    <div class="footer__column footer__column-content_social">
+    <div class="footer__column footer__column_content_social">
       <h2 class="footer__column-heading">Redes sociales</h2>
       <ul class="footer__list">
         <li class="footer__list-item">
@@ -287,7 +287,7 @@
  <p class="footer__copyright">
       &copy; 2024 Misael Navarro
     </p>
-</footer>  
+</section>  
   </main>
   </body>
 </html>
