--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
     </li>
   </ul>
 </section>
-<section class="footer">
+<div class="page">
+<footer id="contact" class="footer">
   <div class="footer__columns">
     <div class="footer__column">
       <img class="footer__logo" src="images/logo_white.svg" alt="Biblioteca logo">
@@ -268,26 +269,24 @@
       <h2 class="footer__column-heading">Redes sociales</h2>
       <ul class="footer__list">
         <li class="footer__list-item">
-          <a id="contact"  href="#contact" class="footer__column-link">
+          <a id="facebook-link"  href="#contact" class="footer__column-link">
             <img src="images/facebook_white.svg" class="footer__social-icon" alt="Facebook icon">
             Facebook
           </a>
         </li>
         <li class="footer__list-item">
-          <a href="#" class="footer__column-link">
+          <a id="instagram-link" href="#contact" class="footer__column-link">
             <img src="images/instagram_white.svg" class="footer__social-icon" alt="Instagram icon">
             Instagram
           </a>
         </li>
       </ul>
-    </div>
-   
-
-  </div>
+    </div> 
  <p class="footer__copyright">
       &copy; 2024 Misael Navarro
     </p>
-</section>  
+  </footer> 
+</div>
   </main>
   </body>
 </html>
