--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
               class="person__image person__image_size_m"/>
              </div>
         </section>
-        <section class="membership" href="#member" id="member">
-  <h2 class="membership__title">¡Convertirse en miembro es muy fácil!</h2>
-  <ul class="membership__steps">
+        <section class="membership" id="member">
+    <h2 class="membership__title">¡Convertirse en miembro es muy fácil!</h2>
+    <ul class="membership__steps">
     <li class="step">
       <h3 class="step__title">
         Paso 1
@@ -248,12 +248,11 @@
         ¡Disfruta de los increíbles beneficios de nuestra membresía!
       </p>
     </li>
-  </ul>
-</section>
-<div class="page">
-<footer id="contact" class="footer">
-  <div class="footer__columns">
-    <div class="footer__column">
+    </ul>
+  </section>
+      <footer id="contact" class="footer">
+        <div class="footer__columns">
+        <div class="footer__column">
       <img class="footer__logo" src="images/logo_white.svg" alt="Biblioteca logo">
     </div>
     <div class="footer__column footer__column_content_hours" >
@@ -285,8 +284,8 @@
  <p class="footer__copyright">
       &copy; 2024 Misael Navarro
     </p>
-  </footer> 
-</div>
-  </main>
+      </footer>
+    </main>
+    </div>
   </body>
 </html>
