--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
              </div>
         </section>
         <section class="membership" id="member">
-    <h2 class="membership__title">¡Convertirse en miembro es muy fácil!</h2>
-    <ul class="membership__steps">
-    <li class="step">
+          <h2 class="membership__title">¡Convertirse en miembro es muy fácil!</h2>
+            <ul class="membership__steps">
+                <li class="step">
       <h3 class="step__title">
         Paso 1
         <img
@@ -249,7 +249,9 @@
       </p>
     </li>
     </ul>
+    
   </section>
+  <div class="page">
       <footer id="contact" class="footer">
         <div class="footer__columns">
         <div class="footer__column">
@@ -281,11 +283,11 @@
         </li>
       </ul>
     </div> 
- <p class="footer__copyright">
+    <p class="footer__copyright">
       &copy; 2024 Misael Navarro
     </p>
       </footer>
-    </main>
+   </main>
     </div>
   </body>
 </html>
